--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.39.7",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.1",
-    "framer-motion": "^11.0.5",
     "react-hook-form": "^7.50.1",
-    "clsx": "^2.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^6.22.1",
     "tailwind-merge": "^2.2.1",
-    "date-fns": "^3.3.1",
-    "zustand": "^4.5.0",
-    "@supabase/supabase-js": "^2.39.7",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
